working on navigation, added background color, logo.svg, header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles/style.css">
   
   <title>Frontend Mentor | News homepage</title>
 
@@ -15,12 +16,17 @@
   </style>
 </head>
 <body>
-
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <header></header>
+  <nav>
+      <img src="./assets/images/logo.svg" alt="" width="50px" height="30px">
+    <ul>
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ul>
+  </nav>
 
   The Bright Future of Web 3.0?
 
